@@ -16,11 +16,8 @@ FIND_PACKAGE(OpenCV)
 IF (OpenCV_FOUND)
 
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common)
-  INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR})
-  LINK_LIBRARIES(${OPENCV_LIBRARIES})
-
-  #MESSAGE(STATUS "opencv libs ${OPENCV_LIBRARIES}")
-
+  INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
+  LINK_LIBRARIES(${OpenCV_LIBRARIES})
   ADD_LIBRARY(yarp_opencv OpenCVGrabber.cpp OpenCVGrabber.h)
 
 
